# actor_framework_cxx

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  mise.toml  sonar-project.properties  todo.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
.mise/env/: env.sh
.mise/postinstalls/: zephyr-sdk.sh
cmake/: GTest.cmake
docs/: timer_wheel.md
examples/basic_zephyr/: CMakeLists.txt  README.md  prj.conf  west.yml
examples/basic_zephyr/src/: main.c
examples/led_actor/: README.md  app_actor.c  button_actor.c  button_actor.h  led_actor.c  led_actor.h  main.c
include/: ipc.h  ipc_defaults.h
src/: ipc.c  ipc_actor_define_common.h  ipc_internal.h  ipc_port.h
src/port/posix/: ipc_actor_define.h  ipc_config.h  ipc_port_state.h  posix_ipc_port.c
src/port/zephyr/: Kconfig  ipc_actor_define.h  ipc_config.h  ipc_defaults.h  ipc_port_state.h  zephyr_ipc_port.c
tests/: CMakeLists.txt
tests/mocks/: mock_ipc_port.c  mock_ipc_port.h
tests/unit/: test_ipc_dispatch.cpp  test_ipc_error_paths.cpp  test_ipc_hooks.c  test_ipc_lifecycle.cpp  test_ipc_query.cpp  test_ipc_registry.cpp  test_ipc_send.cpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
